Fixed some spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ font-family: 'Passion One', cursive; */
 }
 
 p {
-    color: white;
+    color: #353A3F;
 }
 
 #myBio {
@@ -130,6 +130,8 @@ p {
     border-right: 3px solid #353A3F;
     padding-right: 10px;
 }
+
+
 
 .college {
     width: 100px;
@@ -169,6 +171,11 @@ p {
 
 #collegesGroup {
     margin-left: 60px;
+    background-color: white;
+}
+
+.bioSecond {
+    background-color: white;
 }
 
 #portfolioSection {
@@ -209,8 +216,6 @@ p {
     width: 100%;
     width: 100vw;
     height: 100%;
-    background: #3a6186; /* fallback for old browsers */
-
     background-color: #353A3F;
       color : #fff;  
   }
@@ -228,6 +233,7 @@ p {
       color: #353A3F;
   }
   
+
 
 
 
